@@ -1665,28 +1665,19 @@ class tx_oelib_configcheck {
 	 *                (this will be mentioned in the error message)
 	 * @param string flexforms sheet pointer, eg. "sDEF", will be ignored
 	 *               if $canUseFlexforms is set to false
-	 * @param boolean whether internal addresses ("user@servername") are
-	 *                considered valid
+	 * @param boolean $unused unused
 	 * @param string a sentence explaining what that configuration value
 	 *               is needed for, must not be empty
 	 */
 	public function checkIsValidEmailOrEmpty(
-		$fieldName, $canUseFlexforms, $sheet, $allowInternalAddresses, $explanation
+		$fieldName, $canUseFlexforms, $sheet, $unused, $explanation
 	) {
 		$value = $this->objectToCheck->getConfValueString($fieldName, $sheet);
 		if ($value == '') {
 			return;
 		}
 
-		if ($allowInternalAddresses) {
-			$isValid = preg_match(
-				'/^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)$/', $value
-			);
-		} else {
-			$isValid = t3lib_div::validEmail($value);
-		}
-
-		if (!$isValid) {
+		if (!t3lib_div::validEmail($value)) {
 			$message = 'The e-mail address in <strong>'.$this->getTSSetupPath()
 				.$fieldName.'</strong> is set to <strong>'.$value.'</strong> '
 				.'which is not valid. E-mails might not be received as long as '
